# warnet

./: 50.graphml  Cargo.toml  Dockerfile  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: apidocs.yml  build-rpc-images.yml  deploy.yml  deploy_prod.yml  flatpak.yaml  lockfile.yml  test.yml
docs/: graph.md  install.md  running.md  warnet.md
graphs/: basic3.graphml
resources/flatpak/: make_flatpak.sh
resources/graphs/: default.graphml
resources/manifests/: promtail-values.yaml
resources/scripts/: install_logging.sh  k8s-log-collector.sh
scripts/: file-executor.py  graphdocs.py  miner.sh  transactor.sh
src/backend/: kubernetes_backend.py
src/cli/: debug.py  graph.py  rpc.py
src/graphs/: cycle_graph.py  default.graphml
src/interfaces/: docker_interface.py
src/logging_config/: config.json
src/rust-cli/: debug.rs  general.rs  graph.rs  graphml.rs  image.rs  main.rs  network.rs  rpc_call.rs  scenarios.rs
src/scenarios/: ln_init.py  miner_std.py
src/schema/: __init__.py  graph_schema.json
src/services/: fluentd.py  prometheus.py
src/templates/: Dockerfile  bitcoin.conf  docker-entrypoint.sh  fluent.conf  fork_observer_config.toml  torrc  torrc.da
src/utils/: utils.py
src/warnet/: __init__.py  config_utils.py  connect_nodes.py  control.py  deploy.py  generate_docker_compose.py  graph_schema.json  ip_addr.py  lnnode.py  network.py  resources.py  server.py  services.py  tags.py  tank.py  test_framework_bridge.py  utils.py  (+2 more)
test/: get_service_ip_test.py  graph_test.py  ln_test.py  scenarios_test.py  test_base.py
(+22 files in other folders)
