[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "warnet"
description = "Monitor and analyze the emergent behaviours of bitcoin networks"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bitcoin", "warnet"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "click",
    "jsonrpcclient",
    "networkx",
    "requests<2.30",
    "rich",
]

[project.scripts]
warnet = "warnet.server:run_server"
warcli = "cli.main:cli"

[project.optional-dependencies]
server = [
        "docker",
        "flask",
        "Flask-JSONRPC",
        "jsonschema",
        "jsonrpcserver",
        "jsonrpcclient",
        "kubernetes",
        "numpy",
        "tabulate",
        "PyYAML"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = [
    "src/test_framework/*.py",
    "src/scenarios/*"
]
line-length = 100
indent-width = 4
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] # Line too long
